# mars

./: .gitignore  Cargo.toml  Makefile  README.md
js/: package-lock.json  package.json  snowpack.config.js  tsconfig.json
js/public/: index.html
js/src/: CodeCell.tsx  CpuInfo.tsx  LoadingScreen.tsx  Notebook.tsx  TextTypography.tsx  index.tsx  util.tsx
src/: context_manager.rs  index.html  main.rs
src/web/: CodeCell.js  LoadingScreen.js  TextTypography.js  build-manifest.json  index.html  index.js  util.js
src/web/_snowpack/pkg/: import-map.json  lit.js
src/web/_snowpack/pkg/lit/: decorators.js
