[package]
name = "mahrs"
version = "0.1.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A data science notebook"
liscence = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/mahrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
webbrowser = "0.5.5"
evcxr = "0.9.0"
flume = "0.10"
futures-lite = "1"
globals = "1"
